testsuite/tests/indexed-types/should_fail/T4179.stderr

T4179.hs:26:16: error:
    • Could not deduce: A2 (x (A2 (FCon x) -> A3 (FCon x)))
                        ~ A2 (FCon x)
      from the context: (x @@ Con x, Con @@ x, DoC (FCon x), Functor x)
        bound by the type signature for:
                   fCon :: forall (x :: * -> *).
                           (Con @@ x, x @@ Con x, Con @@ x, DoC (FCon x), Functor x) =>
                           Con x -> A2 (FCon x) -> A3 (FCon x)
        at T4179.hs:25:1-72
      Expected type: x (A2 (FCon x) -> A3 (FCon x))
                     -> A2 (FCon x) -> A3 (FCon x)
        Actual type: x (A2 (FCon x) -> A3 (FCon x))
                     -> A2 (x (A2 (FCon x) -> A3 (FCon x)))
                     -> A3 (x (A2 (FCon x) -> A3 (FCon x)))
      NB: ‘A2’ is a non-injective type family
    • In the first argument of ‘foldDoC’, namely ‘op’
      In the expression: foldDoC op
      In an equation for ‘fCon’: fCon = foldDoC op
    • Relevant bindings include
        fCon :: Con x -> A2 (FCon x) -> A3 (FCon x)
          (bound at T4179.hs:26:1)
